[tool.poetry]
name = "father"
version = "0.1.0"
description = ""
authors = ["sdkim96 <seong960603@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.2"
requests = "^2.31.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
